fix resulttable not overflowing when a lot of goals

--- a/rekenlogboek/client-side/src/scss/student/components/ResultTable.scss
+++ b/rekenlogboek/client-side/src/scss/student/components/ResultTable.scss
@@ -17,6 +17,8 @@
 		border: 1px solid $gray;
 		display: flex;
 		flex-direction: column;
+		height: 17rem;
+		overflow-y: scroll;
 
 		.row {
 			display: flex;
